logs/sesar-web-services-library.log
Listing '.'...
Listing './bin'...
Compiling './bin/gends_extract_simple_types.py'...
Compiling './bin/gends_generate_django.py'...
Compiling './bin/gends_run_gen_django.py'...
Compiling './bin/generateDS.py'...
Compiling './bin/generateds_gui.py'...
Compiling './bin/process_includes.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SESAR_Web_Services_Library-0.9.egg-info'...
Listing './lib/python3.5/site-packages/generateDS-2.29.3.egg-info'...
Listing './lib/python3.5/site-packages/libgenerateDS'...
Listing './lib/python3.5/site-packages/libgenerateDS/gui'...
Compiling './lib/python3.5/site-packages/libgenerateDS/process_includes.py'...
***   File "./lib/python3.5/site-packages/libgenerateDS/process_includes.py", line 97
    print 'trace --'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sesarwslib'...
Listing './lib/python3.5/site-packages/sesarwslib/sample'...
Compiling './lib/python3.5/site-packages/sesarwslib/sesarwsclient.py'...
***   File "./lib/python3.5/site-packages/sesarwslib/sesarwsclient.py", line 66
    print httpError.read()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
